# openvoicestream

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  BENCHMARKS.md  DEVELOP.md  Dockerfile  Dockerfile.rk3576  Dockerfile.slim  Dockerfile.slim.qwen3  Dockerfile.update  Dockerfile.v34  README.md  README.zh-CN.md
agent/: Dockerfile  Dockerfile.rebot-arm  HANDOFF-2026-05-18-debug.md  HANDOFF.md  README.md  _ik_envelope_new.csv  entrypoint-rebot.sh  pyproject.toml
agent/apps/dialogue/: __init__.py  app.py  config.yaml
agent/apps/multi_mode/: config.yaml
agent/apps/voice_arm/: __init__.py  app.py  minimal_so_follower.py  so_arm.py
agent/docs/: extending_with_custom_modes.md  voice-scenario-test-catalog.md
agent/openvoicestream_agent/: __init__.py  app_base.py  app_mode.py  audio_io.py  cli.py  config.py  event_bus.py  plugin.py  session.py  slv_client.py
agent/openvoicestream_agent/actuators/: __init__.py  factory.py  so_arm.py
agent/openvoicestream_agent/apps/companion_robot/: app.py
agent/openvoicestream_agent/apps/voice_arm/: app.py  config.yaml
agent/openvoicestream_agent/audio/: tapped_audio_io.py
agent/openvoicestream_agent/llm/: __init__.py  base.py  edge_llm.py  openai_compat.py
agent/openvoicestream_agent/modes/: interpreter.py
agent/openvoicestream_agent/plugins/: actuator_actions.py  actuator_observation_server.py  debug_dashboard.py
agent/openvoicestream_agent/plugins/static/: dashboard.css  dashboard.html  dashboard.js
agent/openvoicestream_agent/tools/: registry.py  runner.py
agent/openvoicestream_agent/translator/: lang_map.py
agent/openvoicestream_agent/wake_sources/: openwakeword.py
agent/ovs_agent/: __init__.py  app_base.py  app_mode.py  audio_io.py  cli.py  config.py  protocol.py  slv_client.py  vad.py
agent/ovs_agent/actuators/: actions.py  base.py  factory.py  serial_resolve.py
agent/ovs_agent/apps/companion_robot/: README.md  __init__.py  app.py  demo_tools.py
agent/ovs_agent/apps/live_caption/: __init__.py  app.py  config.yaml
agent/ovs_agent/apps/multi_mode/: app.py
agent/ovs_agent/apps/simul_interpret/: __init__.py  app.py  config.yaml
agent/ovs_agent/apps/translator/: app.py
agent/ovs_agent/apps/voice_arm/: __init__.py  app.py  config.yaml  so_arm.py
agent/ovs_agent/apps/voice_rebot_arm/: RUNBOOK.md  __init__.py  actions.yaml  app.py  config.yaml  dashboard_bus.py  dashboard_plugin.py  grasp_plugin.py  grasp_service.py  rebot_actuator.py  rebot_arm.py  static_dashboard.html
agent/ovs_agent/apps/voice_rebot_arm/perception/: __init__.py  annotate.py  clip_tokenizer.py  ggcnn_refiner.py  grasp_geometry.py  ordinary_grasp.py  text_pe.py  transforms.py  yolo_onnx.py
agent/ovs_agent/apps/voice_rebot_arm/tools/: export_yoloe_seg_model.py  grasp_cycle_check.py  grasp_pose_matrix.py  grasp_replay.py  grasp_report.py  grasp_selfcheck.py  (+6 more)
agent/ovs_agent/audio/: __init__.py  devices.py  profiles.py  tapped_audio_io.py  vad_gate.py
agent/ovs_agent/llm/: base.py
agent/ovs_agent/plugins/: actuator_actions.py  actuator_observation_server.py  debug_dashboard.py
agent/ovs_agent/plugins/static/: live_caption.html  serve_caption.py
agent/ovs_agent/streaming_translate/: __init__.py  committer.py  echo_filter.py
agent/ovs_agent/tools/: action_tools.py  builtin.py  registry.py  runner.py
agent/ovs_agent/wake_sources/: openwakeword.py  stub_ext.py
agent/rebot-sdk-patches/: 0001-enable-latched-fault-autorecovery.patch  0002-move-to-traj-clik-ik-fallback.patch
agent/tests/: conftest.py  sim_pump.py  test_a3_a4_no_double_retry.py  test_actuator_actions.py  test_adaptive_force.py  test_advertise_reconnect.py  test_advertise_tool_fields.py  test_arm_dashboard.py  test_asr_watchdog.py  test_audio_devices.py  test_audio_playback_position.py  test_barge_during_tool.py  test_bargein_discard_latch.py  test_bargein_mic_forward.py  test_clip_tokenizer.py  test_companion_robot.py  test_config_env_override.py  test_config_unknown_keys.py  test_dashboard_api.py  test_dashboard_double_start.py  test_dashboard_llm_health.py  test_dashboard_models.py  test_dashboard_translator_api.py  test_dashboard_typed_errors.py  test_dashboard_v2.py  test_debug_dashboard.py  test_dialogue_app.py  test_dispatch_concurrency.py  test_e2e_orin.py  test_echo_recovery.py  test_embin_segmenter.py  test_eviction_storm_fix.py  test_ggcnn_refiner.py  test_grasp_harness_ext.py  test_grasp_multiframe.py  test_grasp_noise_robustness.py  test_grasp_plugin.py  test_grasp_recall_ggcnn.py  test_grasp_report.py  test_grasp_service.py  (+64 more)
agent/tests/e2e/: conftest.py  fake_audio.py  test_barge_in.py  test_llm_resilience.py  test_multi_turn.py  test_prompt_editor.py  test_rebot_scenarios.py  test_rebot_voice_capture.py  test_reconnect.py  test_scenario_accuracy.py  test_server_loop_tool_e2e.py  test_slv_error_recovery.py  test_translate_apps_e2e.py
demos/: .dockerignore  Dockerfile  README.md  docker-compose.demos.yml  pyproject.toml  registry.json  run-local.sh
demos/asr-caption/: demo.json
demos/asr-caption/backend/: main.py
demos/asr-caption/frontend/: index.html
demos/common/backend/: slv_proxy.py  switch_api.py
demos/common/frontend/: mic-capture.js  mic-worklet.js  slv-client.js  ui.css  ui.js  v2v-client.js
demos/diarization/: demo.json
demos/diarization/backend/: main.py
demos/diarization/frontend/: index.html
demos/gallery/: demo.json
demos/gallery/backend/: main.py
demos/gallery/frontend/: index.html  kiosk.js
demos/tests/: conftest.py  mock_slv.py  test_asr_caption.py  test_diarization_demo.py  test_gallery.py  test_loadable_filter.py  test_tts_playground.py  test_v2v_chat.py  test_voice_clone.py
demos/tts-playground/: demo.json
demos/tts-playground/backend/: main.py
demos/tts-playground/frontend/: index.html
demos/v2v-chat/: demo.json
demos/v2v-chat/backend/: main.py
demos/v2v-chat/frontend/: app.js  index.html
demos/voice-clone/: demo.json
demos/voice-clone/backend/: main.py
demos/voice-clone/frontend/: app.js  index.html
services/translator/: pyproject.toml  server.py  test_server_smoke.py
(+551 files in other folders)
