[project]
name = "openvoicestream-agent"
version = "0.1.0"
description = "Agent-layer client that wires OpenVoiceStream (SLV /v2v/stream) to an OpenAI-compatible LLM."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "websockets>=12",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "openai>=1.40",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
silero = [
    "silero-vad>=5.1",
    "torch>=2.0",
]
# Actuator voice-app (apps/voice_arm): SO-ARM serial driver, openWakeWord
# keyword spotter, multi-channel mic, and the FastAPI observation server.
arm = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "openwakeword>=0.6",
    "feetech-servo-sdk>=1.0",
    "pyaudio>=0.2.13",
]
e2e = [
    "pytest-asyncio>=0.21",
    "pytest-playwright>=0.4",
    "aiohttp>=3.9",
]

[project.scripts]
ovs-agent = "ovs_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ovs_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    # Actuator (voice-arm) tests exercise the FastAPI observation server
    # via starlette's TestClient (needs httpx).
    "fastapi>=0.110",
    "httpx>=0.27",
]
