[project]
name = "slv-demos"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
